// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add and update aircraft documents Add and update documents 1`] = `
{
  "alertDaysBefore": 30,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "documentId": "TST",
  "endDate": "2023-10-01",
  "hardLimit": 0,
  "softLimit": 7,
  "startDate": "2023-10-01",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Add and update aircraft documents Add and update documents 2`] = `
{
  "alertDaysBefore": 30,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "documentId": "TST",
  "endDate": "2023-10-01",
  "hardLimit": 0,
  "softLimit": 7,
  "startDate": "2023-10-02",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "totalPercentageHours": 5,
    "usablePercentageHours": 3,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 2`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane 2",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "totalPercentageHours": 5,
    "usablePercentageHours": 3,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`GET /aircrafts should return all aircrafts as an admin 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 10,
          "softLimit": 8,
          "untilExpiration": 2,
        },
      ],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -6,
      "totalPercentageHours": 4,
      "totalTime": "4783:20",
      "usablePercentageHours": 2,
      "warnings": [
        {
          "description": "aircraft.alerts.expired",
          "documentId": "insurance",
          "hardLimit": 0,
          "softLimit": null,
          "untilExpiration": 33,
        },
      ],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 60,
      "tachUntilNextMaintenance": 11,
      "totalPercentageHours": 16,
      "totalTime": "6118:40",
      "usablePercentageHours": 14,
      "warnings": [
        {
          "description": "aircraft.alerts.expired",
          "documentId": "insurance",
          "hardLimit": 0,
          "softLimit": null,
          "untilExpiration": 33,
        },
      ],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "fuelTypes": [
      "AVGAS",
    ],
    "hourlyRateEur": 228,
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceTach": 5180,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceTach": 5230,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "registration": "OH-P28",
    "seats": 4,
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 5,
          "softLimit": 3,
          "untilExpiration": 2,
        },
      ],
      "daysUntilNextMaintenance": Any<Number>,
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-04T13:20:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -1,
      "totalPercentageHours": 4,
      "totalTime": "5230:10",
      "usablePercentageHours": 2,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 182,
    "yearOfManufacture": 2005,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a admin without sudo 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 10,
          "softLimit": 8,
          "untilExpiration": 2,
        },
      ],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -6,
      "totalPercentageHours": 4,
      "totalTime": "4783:20",
      "usablePercentageHours": 2,
      "warnings": [
        {
          "description": "aircraft.alerts.expired",
          "documentId": "insurance",
          "hardLimit": 0,
          "softLimit": null,
          "untilExpiration": 33,
        },
      ],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 60,
      "tachUntilNextMaintenance": 11,
      "totalPercentageHours": 16,
      "totalTime": "6118:40",
      "usablePercentageHours": 14,
      "warnings": [
        {
          "description": "aircraft.alerts.expired",
          "documentId": "insurance",
          "hardLimit": 0,
          "softLimit": null,
          "untilExpiration": 33,
        },
      ],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a user 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 10,
          "softLimit": 8,
          "untilExpiration": 2,
        },
      ],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -6,
      "totalPercentageHours": 4,
      "totalTime": "4783:20",
      "usablePercentageHours": 2,
      "warnings": [
        {
          "description": "aircraft.alerts.expired",
          "documentId": "insurance",
          "hardLimit": 0,
          "softLimit": null,
          "untilExpiration": 33,
        },
      ],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 60,
      "tachUntilNextMaintenance": 11,
      "totalPercentageHours": 16,
      "totalTime": "6118:40",
      "usablePercentageHours": 14,
      "warnings": [
        {
          "description": "aircraft.alerts.expired",
          "documentId": "insurance",
          "hardLimit": 0,
          "softLimit": null,
          "untilExpiration": 33,
        },
      ],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts/id Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "radio",
      "endDate": "2025-08-31",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-09-01",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "arc",
      "endDate": "2026-03-15",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-03-16",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "insurance",
      "endDate": "2025-06-06",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-06-07",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "finavia",
      "endDate": "2025-12-31",
      "hardLimit": null,
      "softLimit": 0,
      "startDate": "2025-01-01",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "equipment": "SDFGY/S",
  "fuelTypes": [
    "JETA-1",
  ],
  "hourlyRateEur": 216,
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceTach": 4709,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 4778,
    "nextMaintenanceType": "100h",
    "totalPercentageHours": 10,
    "usablePercentageHours": 8,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "registration": "OH-STL",
  "seats": 4,
  "status": {
    "cautions": [
      {
        "description": "aircraft.alerts.usableHours",
        "hardLimit": 10,
        "softLimit": 8,
        "untilExpiration": 2,
      },
    ],
    "lastLandingAirport": "EFHK",
    "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
    "remainingFuelLitres": 10,
    "tachUntilNextMaintenance": -6,
    "totalPercentageHours": 4,
    "totalTime": "4783:20",
    "usablePercentageHours": 2,
    "warnings": [
      {
        "description": "aircraft.alerts.expired",
        "documentId": "insurance",
        "hardLimit": 0,
        "softLimit": null,
        "untilExpiration": 33,
      },
    ],
  },
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 148,
  "yearOfManufacture": 2007,
}
`;
